added images in header

--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My trip to London</title>
 </head>
+
+<header>
+    <h1> <strong> Il mio viaggio a Londra </strong></h1>
+    <img src="C:\Users\adria\OneDrive\Desktop\progetti boolean\html-london-trip\img\pexels-bill-emrich-230794-0.jpg"
+        alt="">
+    <img src="C:\Users\adria\OneDrive\Desktop\progetti boolean\html-london-trip\img\pexels-bill-emrich-230794-1.jpg"
+        alt="">
+    <img src="C:\Users\adria\OneDrive\Desktop\progetti boolean\html-london-trip\img\pexels-bill-emrich-230794-2.jpg"
+        alt="">
+</header>
 
 <body>
 
