added table with datas

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>My trip to London</title>
 </head>
 
+<!-- header with city name and presentaion photos -->
 <header>
     <h1> <strong> Il mio viaggio a Londra </strong></h1>
     <img src="C:\Users\adria\OneDrive\Desktop\progetti boolean\html-london-trip\img\pexels-bill-emrich-230794-0.jpg"
@@ -16,10 +17,39 @@
         alt="">
     <img src="C:\Users\adria\OneDrive\Desktop\progetti boolean\html-london-trip\img\pexels-bill-emrich-230794-2.jpg"
         alt="">
+    <hr>
 </header>
 
 <body>
-
+    <h2><strong>Le mie spese</strong></h2>
+    <table>
+        <tr>
+            <td><strong>Numero</strong></td>
+            <td><strong>Decrizione</strong></td>
+            <td><strong>Costo</strong></td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+        </tr>
+        <tr>
+            <td>>Totale</td>
+            <td></td>
+            <td>360€</td>
+        </tr>
+    </table>
+    <hr>
 </body>
 
 </html>
