--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </header>
 
 <body>
+    <!-- expenses table -->
     <h2><strong>Le mie spese</strong></h2>
     <table>
         <tr>
@@ -44,12 +45,27 @@
             <td>120€</td>
         </tr>
         <tr>
-            <td>>Totale</td>
+            <td>Totale</td>
             <td></td>
             <td>360€</td>
         </tr>
     </table>
     <hr>
+
+    <!-- what to do -->
+    <div>
+        <h2><strong>Cose da fare</strong></h2>
+        <ul>
+            <li>Visitare la Tower of London &#10008</li>
+            <li>Visitare Greenwich &#10004</li>
+            <li>Ascoltare un artista di strada a Covent Garden &#10004</li>
+            <li>Mangiare il tipico Fish and Chips inglese &#10008</li>
+        </ul>
+        <hr>
+    </div>
+
+    
+
 </body>
 
 </html>
