--- a/index.html
+++ b/index.html
@@ -64,7 +64,29 @@
         <hr>
     </div>
 
-    
+    <!-- useful info-->
+    <div>
+        <h2><strong>Info utili:</strong></h2>
+        <ol>
+            <li>Numeri utili di emergenza</li>
+            <ul>
+                <li><strong>999</strong> - Emergenza</li>
+                <li><strong>101</strong> - Numero polizia</li>
+                <li><strong>111</strong> - Numero assistenza medica</li>
+            </ul>
+            <li>Hotel</li>
+            <ul>
+                <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+                <li><strong>Indirizzo Hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
+            </ul>
+            <li>Aereo</li>
+            <ul>
+                <li><strong>Volo di Andata:</strong> YI234X, ore 9:30 da Milano Malpensa</li>
+                <li><strong>Volo di Ritorno:</strong> YI236X, ore 18:30 da London Heatrow</li>
+            </ul>
+        </ol>
+        <hr>
+    </div>
 
 </body>
 
