--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <!-- header with city name and presentaion photos -->
 <header>
     <h1> <strong> Il mio viaggio a Londra </strong></h1>
-    <img src="C:Users\adria\OneDrive\Desktop\progetti boolean\html-london-trip\img\pexels-bill-emrich-230794-0.jpg"
+    <img src="C:Users/adria/OneDrive/Desktop/progetti boolean/html-london-trip/img/pexels-bill-emrich-230794-0.jpg"
         alt="">
-    <img src="C:Users\adria\OneDrive\Desktop\progetti boolean\html-london-trip\img\pexels-bill-emrich-230794-1.jpg"
+    <img src="C:Users/adria/OneDrive/Desktop/progetti boolean/html-london-trip/img/pexels-bill-emrich-230794-1.jpg"
         alt="">
-    <img src="C:Users\adria\OneDrive\Desktop\progetti boolean\html-london-trip\img\pexels-bill-emrich-230794-2.jpg"
+    <img src="C:Users/adria/OneDrive/Desktop/progetti boolean/html-london-trip/img/pexels-bill-emrich-230794-2.jpg"
         alt="">
     <hr>
 </header>
