--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
 <!-- header with city name and presentaion photos -->
 <header>
     <h1> <strong> Il mio viaggio a Londra </strong></h1>
-    <img src="C:Users/adria/OneDrive/Desktop/progetti boolean/html-london-trip/img/pexels-bill-emrich-230794-0.jpg"
-        alt="">
-    <img src="C:Users/adria/OneDrive/Desktop/progetti boolean/html-london-trip/img/pexels-bill-emrich-230794-1.jpg"
-        alt="">
-    <img src="C:Users/adria/OneDrive/Desktop/progetti boolean/html-london-trip/img/pexels-bill-emrich-230794-2.jpg"
-        alt="">
+    <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+    <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+    <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
     <hr>
 </header>
 
@@ -56,10 +53,10 @@
     <div>
         <h2><strong>Cose da fare</strong></h2>
         <ul>
-            <li>Visitare la Tower of London &#10008 </li>
-            <li>Visitare Greenwich &#10004 </li>
-            <li>Ascoltare un artista di strada a Covent Garden &#10004 </li>
-            <li>Mangiare il tipico Fish and Chips inglese &#10008 </li>
+            <li>Visitare la Tower of London &#10008; </li>
+            <li>Visitare Greenwich &#10004; </li>
+            <li>Ascoltare un artista di strada a Covent Garden &#10004; </li>
+            <li>Mangiare il tipico Fish and Chips inglese &#10008; </li>
         </ul>
         <hr>
     </div>
@@ -68,22 +65,25 @@
     <div>
         <h2><strong>Info utili:</strong></h2>
         <ol>
-            <li>Numeri utili di emergenza</li>
-            <ul>
-                <li><strong>999</strong> - Emergenza </li>
-                <li><strong>101</strong> - Numero polizia </li>
-                <li><strong>111</strong> - Numero assistenza medica </li>
-            </ul>
-            <li>Hotel</li>
-            <ul>
-                <li><strong>Nome Hotel:</strong> Buckingham Palace </li>
-                <li><strong>Indirizzo Hotel:</strong> Westminster, London SW1A 1AA, Regno Unito </li>
-            </ul>
-            <li>Aereo</li>
-            <ul>
-                <li><strong>Volo di Andata:</strong> YI234X, ore 9:30 da Milano Malpensa </li>
-                <li><strong>Volo di Ritorno:</strong> YI236X, ore 18:30 da London Heatrow </li>
-            </ul>
+            <li>Numeri utili di emergenza
+                <ul>
+                    <li><strong>999</strong> - Emergenza </li>
+                    <li><strong>101</strong> - Numero polizia </li>
+                    <li><strong>111</strong> - Numero assistenza medica </li>
+                </ul>
+            </li>
+            <li>Hotel
+                <ul>
+                    <li><strong>Nome Hotel:</strong> Buckingham Palace </li>
+                    <li><strong>Indirizzo Hotel:</strong> Westminster, London SW1A 1AA, Regno Unito </li>
+                </ul>
+            </li>
+            <li>Aereo
+                <ul>
+                    <li><strong>Volo di Andata:</strong> YI234X, ore 9:30 da Milano Malpensa </li>
+                    <li><strong>Volo di Ritorno:</strong> YI236X, ore 18:30 da London Heatrow </li>
+                </ul>
+            </li>
         </ol>
         <hr>
     </div>
