corrections, deleted strong in all Hs and changed absolute path wit relative for images

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <!-- header with city name and presentaion photos -->
 <header>
-    <h1> <strong> Il mio viaggio a Londra </strong></h1>
-    <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
-    <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
-    <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+    <h1> Il mio viaggio a Londra </h1>
+    <img src="img/pexels-bill-emrich-230794-0.jpg" alt="immagine londo eye">
+    <img src="img/pexels-bill-emrich-230794-1.jpg" alt="seconda immagine londra, Tamigi">
+    <img src="img/pexels-bill-emrich-230794-2.jpg" alt="scorcio di Londra">
     <hr>
 </header>
 
 <body>
     <!-- expenses table -->
-    <h2><strong>Le mie spese</strong></h2>
+    <h2>Le mie spese</h2>
     <table>
         <tr>
             <td><strong>Numero</strong></td>
@@ -51,7 +51,7 @@
 
     <!-- what to do -->
     <div>
-        <h2><strong>Cose da fare</strong></h2>
+        <h2>Cose da fare</h2>
         <ul>
             <li>Visitare la Tower of London &#10008; </li>
             <li>Visitare Greenwich &#10004; </li>
@@ -63,7 +63,7 @@
 
     <!-- useful info-->
     <div>
-        <h2><strong>Info utili:</strong></h2>
+        <h2>Info utili:</h2>
         <ol>
             <li>Numeri utili di emergenza
                 <ul>
